# Plume_doc

./: .gitignore  BOOTSTRAP-plume-docs.md  Cargo.toml  GUIDE-integration-claude-cli.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
crates/plume-core/: Cargo.toml
crates/plume-core/src/: lib.rs  model.rs  ops.rs
src/: App.tsx  Spark.tsx  icons.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: chat.rs  export.rs  import.rs  lib.rs  main.rs  persist.rs
src/bindings/: Block.ts  BlockId.ts  Cell.ts  Document.ts  MarkPatch.ts  Marks.ts  Meta.ts  Node.ts  Op.ts  Run.ts  index.ts
src/editor/: ChatPanel.tsx  CommandPalette.tsx  EditableCell.tsx  EditableTable.tsx  EditableText.tsx  Editor.tsx  EditorContext.ts  SearchBar.tsx  TabManager.test.tsx  TabManager.tsx  Toolbar.tsx  actions.ts  caret.ts  html.ts  search.test.ts  search.ts  tableOps.test.ts  tableOps.ts  text.test.ts  text.ts
src/render/: BlockView.tsx  DocumentView.tsx  ListGroup.tsx  RunsView.tsx  fixture.ts  marks.ts
