[package]
name = "plume"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Plume — éditeur de documents riches AI-native."
default-run = "plume"

[lib]
name = "plume_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
plume-core = { path = "../crates/plume-core" }
