[package]
name = "plume"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Plume — éditeur de documents riches AI-native."
default-run = "plume"

[lib]
name = "plume_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }
plume-core = { path = "../crates/plume-core" }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
docx-rs = "0.4"
tokio = { version = "1", features = ["process", "io-util"] }
